# ofxstatement-paypal-2

./: .gitignore  .travis.yml  CHANGELOG.md  Makefile  Pipfile  README.md  pyproject.toml  setup.cfg  setup.py
.github/workflows/: test.yml
scripts/: anonymize_paypal.py
src/ofxstatement/plugins/: paypal.py
tests/: test_paypal.py
